--- a/src/styles.css
+++ b/src/styles.css
@@ -28,11 +28,13 @@ img {
 }
 
 .container {
-  width: 1250px;
+  width: 100vw;
   margin: 0 auto;
 }
 .image-input {
   padding-top: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .btn,
@@ -52,7 +54,7 @@ img {
 }
 
 #search-form {
-  width: 80%;
+  width: 70%;
   border-radius: 2px;
   border-color: rgb(119, 119, 119);
 }
@@ -82,9 +84,9 @@ img {
 }
 
 .btn-box {
-  display: block;
-  width: 20%;
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  width: 50%;
 }
 
 .button.is-hidden {
