--- a/src/templates/images.hbs
+++ b/src/templates/images.hbs
@@ -1,5 +1,5 @@
 {{#each this}}
-<li class='galery-item'>
+<li class='galery-item post'>
     <div class="photo-card">
         <img src="{{webformatURL}}" alt="{{tags}}" data-source="{{largeImageURL}}" />
 
